메뉴 업데이트. 언어 기능 만드는 중.

--- a/locale/ko_KR/LC_MESSAGES/emulationstation.po
+++ b/locale/ko_KR/LC_MESSAGES/emulationstation.po
@@ -75,6 +75,9 @@ msgstr "폴더 표시"
 msgid "LANGUAGE"
 msgstr "언어"
 
+msgid "FALLBACK FONT"
+msgstr "보조 글꼴"
+
 # Sound Settings
 msgid "SYSTEM VOLUME"
 msgstr "시스템 볼륨"
