- 24개 파일에 걸쳐 모든 UI 코드를 패치대로 수정   - isMappedTo("a", input) → isMappedToAction("accept", input) 변경   - isMappedTo("b", input) → isMappedToAction("back", input) 변경

--- a/locale/ko_KR/LC_MESSAGES/emulationstation.po
+++ b/locale/ko_KR/LC_MESSAGES/emulationstation.po
@@ -125,6 +125,9 @@ msgstr "언어"
 msgid "FALLBACK FONT"
 msgstr "보조 글꼴"
 
+msgid "BUTTON LAYOUT"
+msgstr "버튼 레이아웃"
+
 msgid "UI MODE"
 msgstr "UI 모드"
 
